<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin10"
    android:paddingBottom="@dimen/margin10">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:src="@drawable/ic_facebook"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_userid"
        style="@style/TextMini.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:text="kym71**"
        app:layout_constraintLeft_toRightOf="@id/img_profile"
        app:layout_constraintTop_toTopOf="@id/img_profile" />

    <TextView
        android:id="@+id/text_review_time"
        style="@style/TextMini.LightGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin4"
        android:text="@string/reviewtime"
        app:layout_constraintLeft_toLeftOf="@id/text_userid"
        app:layout_constraintTop_toBottomOf="@id/text_userid" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rtbar_review"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin8"
        app:layout_constraintLeft_toRightOf="@id/text_review_time"
        app:layout_constraintTop_toTopOf="@id/text_review_time" />

    <TextView
        android:id="@+id/text_reivew_content"
        style="@style/TextStyle.Small.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/reviewcontent"
        app:layout_constraintLeft_toLeftOf="@id/text_review_time"
        app:layout_constraintTop_toBottomOf="@id/text_review_time" />

    <TextView
        android:id="@+id/text_review_like"
        style="@style/TextMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/reviewlike"
        app:layout_constraintLeft_toLeftOf="@id/text_reivew_content"
        app:layout_constraintTop_toBottomOf="@id/text_reivew_content" />


    <TextView
        android:id="@+id/text_review_like_count"
        style="@style/TextMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin4"
        android:text="@string/reviewlikeCount"
        app:layout_constraintLeft_toRightOf="@id/text_review_like"
        app:layout_constraintTop_toTopOf="@id/text_review_like" />

    <TextView
        android:id="@+id/text_review_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:text="|"
        app:layout_constraintLeft_toRightOf="@id/text_review_like_count"
        app:layout_constraintTop_toTopOf="@id/text_review_like_count" />

    <TextView
        android:id="@+id/text_review_report"
        style="@style/TextMini.LightGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:text="@string/reviewreport"
        app:layout_constraintLeft_toRightOf="@id/text_review_separator"
        app:layout_constraintTop_toTopOf="@id/text_review_separator"/>

</androidx.constraintlayout.widget.ConstraintLayout>