<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    android:orientation="vertical"
    tools:context=".ReviewWriteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gundo"
            android:textSize="24dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_grade"
            android:layout_width="@dimen/size30"
            android:layout_height="@dimen/size30"
            android:layout_marginLeft="@dimen/margin10"
            android:src="@drawable/ic_15" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin2"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rtbar_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin14"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_grade"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviewwrite_grade"
            app:layout_constraintLeft_toLeftOf="@id/rtbar_write"
            app:layout_constraintRight_toRightOf="@id/rtbar_write"
            app:layout_constraintTop_toBottomOf="@id/rtbar_write" />

        <EditText
            android:id="@+id/edit_review"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="@dimen/margin16"
            android:layout_marginTop="@dimen/margin12"
            android:layout_marginRight="@dimen/margin16"
            android:background="@drawable/reviewwrite_edit"
            android:gravity="top"
            android:hint="@string/reviewwrite_write_review"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_grade" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin14"
            android:background="@drawable/btn_purple_border"
            android:shadowColor="@android:color/transparent"
            android:text="@string/save"
            app:layout_constraintRight_toLeftOf="@id/btn_cancel"
            app:layout_constraintTop_toTopOf="@id/btn_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:background="@drawable/btn_purple_border"
            android:text="@string/cancel"
            app:layout_constraintRight_toRightOf="@id/edit_review"
            app:layout_constraintTop_toBottomOf="@id/edit_review" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>