<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin14"
                    android:text="@string/reviewlist_label"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_background"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gundo"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_age"
                android:layout_width="@dimen/size30"
                android:layout_height="@dimen/size30"
                android:layout_marginLeft="@dimen/margin10"
                android:src="@drawable/ic_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin2"
            android:background="@color/white"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin8"
            android:paddingRight="@dimen/margin8"
            android:paddingBottom="@dimen/margin8">

            <androidx.appcompat.widget.AppCompatRatingBar
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin8"
                android:text="8.2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(1,142참여)" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin10"
            android:background="@color/white"
            android:paddingTop="@dimen/margin10"
            android:paddingBottom="@dimen/margin10">

            <TextView
                android:id="@+id/text_review"
                style="@style/TextStyle.Bold.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin8"
                android:text="@string/linereview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_review_write"
                style="@style/TextStyle.Bold.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin8"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_review_selected"
                android:text="@string/writereview"
                android:textColor="@android:color/holo_orange_dark"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/listview_review"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/text_review"
                app:layout_constraintRight_toRightOf="@id/btn_review_write"
                app:layout_constraintTop_toBottomOf="@id/btn_review_write"
                app:layout_goneMarginRight="@dimen/margin8" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>